--- a/page teste 01/pageteste01.html
+++ b/page teste 01/pageteste01.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
+        <p>Cv Robles Soler Antonio</p>
+        <ul>
+            <li><a href="">Experiences</a></li>
+            <li><a href="">Formations</a></li>
+            <li><a href="">Langues</a></li>
+            <li><a href="">Loisirs</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
     </header>
+    <img src="image.png" alt="img-01">
     <main>
         <h1>
             Mr Robles Soler Antonio
@@ -18,7 +27,6 @@
             N°tel:07.82.76.03.31</br>
             33 ans - Permis B + Véhicule
         </p>
-        <img src="image.png" alt="img-01">
         <h2>
         Experiences professionnelles :
     </h2>
