--- a/page teste 01/pageteste01.html
+++ b/page teste 01/pageteste01.html
@@ -5,61 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="stylesheet" href="pageteste01.css">
 </head>
 <body>
     <header>
-        <p>Cv Robles Soler Antonio</p>
-        <ul>
-            <li><a href="">Experiences</a></li>
-            <li><a href="">Formations</a></li>
-            <li><a href="">Langues</a></li>
-            <li><a href="">Loisirs</a></li>
-            <li><a href="">Contact</a></li>
+        <div class="header">
+            <div class="left">
+                <div class="logo">CV ROBLES SOLER ANTONIO</div>
+            </div>
+            <div class="right">
+        <ul class="menu">
+            <li class="title"><a href="">Experiences</a></li>
+            <li class="title"><a href="">Formations</a></li>
+            <li class="title"><a href="">Langues</a></li>
+            <li class="title"><a href="">Loisirs</a></li>
+            <li class="title"><a href="">Contact</a></li>
         </ul>
+            </div>
+        </div>
     </header>
-    <img src="image.png" alt="img-01">
+    <img class="img01"src="image.png" alt="img-01">
+    <div class="fond">
     <main>
-        <h1>
-            Mr Robles Soler Antonio
-        </h1>
-        <p>14 rue de l'Espierre</br>
-            59200 TOURCOING</br>
-            N°tel:07.82.76.03.31</br>
-            33 ans - Permis B + Véhicule
-        </p>
+        <div class="desc">
+        <h1>Descriptoin</h1>
+        <p>Je mai tout en oeuvre pour adopter les bonnes compétences et ainsi donner un nouveau souffle</br> 
+            à ma vie professionnelle.</br>
+            
+            Lors de mes précédentes expériences, j’ai eu souvant l’occasion de travailler en group</br> 
+            Ces opportunités m’ont permis de développer mon esprit d'équipe.</br>
+            J'adore résoudre des problèmes en général, je suis curieux et rigoureux,</br> 
+            c’est pour cette raison que je pense posséder les qualités requises</br> 
+            pour être integrateur/dévellopeur d'applications web.</p>
+        </div>
+        <hr color="#FFD700">
+        <span class="vertical-line">
+        <div class="texte">
         <h2>
-        Experiences professionnelles :
-    </h2>
-    <ul>
-        <li>Manutentionnaire au seins de l'entreprise de grande distribution Leroy Merlin.</li>
-        <li>Cuisinier au seins de Cosina Del Sol à Tourcoing.</li>
-        <li>Cuisinier au seins du réstaurant La tête dans le cru à Mons en baroeul.</li>
-        <li>Cuisinier au seins du réstaurant Le Villeneuv à Villeneuv d'Ascq.</li>
-        <li>Cuisinier au seins du réstaurant Crocodile à Tourcoing.</li>
-        <li>Cuisinier au seins du réstaurant lLe Charolet à Wasquehal.</li>
-        <li>Cuisinier au seins du réstaurant Le Bistro du croisé Wasquehal.</li>
-        <li>Cuisinier au seins de La Brasserie de l'Usine de Roubaix.</li>
-        <li>Cuisinier au seins de la MRS la Solidarité de Léssines.</li>
-        <li>Commercial pour la société HCS à Avelin.</li>
-    </ul>
-    <h2>Formations et Diplômes :</h2>
-    <ul>
-        <li>Formation d'Integrateur/developpeur d'application web junior au seins de l'etablicement Simplon de Lille</li>
-        <li>Une année de formation D'inforgraphiste au seins de l'établicement Promsoc de Mons</li>
-        <li>Formation de cuisinier au seins du CSEF de Mons</li>
-    </ul>
-    <h2>
-        Langues :
-    </h2>
-    <ul>
-        <li>Français</li>
-        <li>Espagnol</li>
-        <li>Anglais</li>
-    </ul>
-    <h2>
-        Loisirs :
-    </h2>
-    <ul>
+            Experiences professionnelles :
+        </h2>
+        <ul>
+            <li>Manutentionnaire au seins de l'entreprise de grande distribution Leroy Merlin.</li>
+            <li>Cuisinier au seins de Cosina Del Sol à Tourcoing.</li>
+            <li>Cuisinier au seins du réstaurant La tête dans le cru à Mons en baroeul.</li>
+            <li>Cuisinier au seins du réstaurant Le Villeneuv à Villeneuv d'Ascq.</li>
+            <li>Cuisinier au seins du réstaurant Crocodile à Tourcoing.</li>
+            <li>Cuisinier au seins du réstaurant lLe Charolet à Wasquehal.</li>
+            <li>Cuisinier au seins du réstaurant Le Bistro du croisé Wasquehal.</li>
+            <li>Cuisinier au seins de La Brasserie de l'Usine de Roubaix.</li>
+            <li>Cuisinier au seins de la MRS la Solidarité de Léssines.</li>
+            <li>Commercial pour la société HCS à Avelin.</li>
+        </ul>
+        <h2>Formations et Diplômes :</h2>
+        <ul>
+            <li>Formation d'Integrateur/developpeur d'application web junior au seins de l'etablicement Simplon de Lille</li>
+            <li>Formation D'inforgraphiste au seins de l'établicement Promsoc de Mons</li>
+            <li>Formation de cuisinier au seins du CSEF de Mons</li>
+        </ul>
+        <h2>
+            Langues :
+        </h2>
+        <ul>
+            <li>Français</li>
+            <li>Espagnol</li>
+            <li>Anglais</li>
+        </ul>
+        <h2>
+            Loisirs :
+        </h2>
+        <ul>
         <li>Les longue promenade en famille</li>
         <li>L'art</li>
         <li>Le dessin</li>
@@ -69,8 +83,25 @@
         <li>La cuisine</li>
         <li>Les voyages</li>
     </ul>
-    </main>
-    <footer>
-    </footer>
+        </div>
+        </span>
+</main>
+</div>
+<footer>
+    <div class="footer">
+        <div class="cont">
+    <h3>
+        Mr Robles Soler Antonio
+    </h3>
+    <ul>
+        <li>14 rue de l'Espierre</li>
+        <li>59200 TOURCOING</li>
+        <li>N°tel:07.82.76.03.31</li>
+        <li>antonio-123@hotmail.be</li>
+        <li>33 ans - Permis B + Véhicule</li>
+    </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
